say it in lights fix

--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -10,23 +10,24 @@
         <h5>Phone: (203) 233-1456</h5>
       </div>
       <div class="row">
-        <h5>Contact:</h5>
-        <form class='contact-us'>
-          <div class="input-field">
-            <label>Name</label>
-            <input type="text" class='name'>
-          </div>
-          <div class="input-field">
-            <label>Email</label>
-            <input type="text" class='email'>
-          </div>
-          <div class="input-field">
-            <label>Message</label>
-            <textarea rows="8" cols="40" class='message'></textarea>
-          </div>
-          <h6 class='message'></h6>
-          <input type="submit" value="Send" class='btn submit'>
-        </form>
+        <h5>Email:</h5>
+        <h5><a href="mailto:grassyhillproductions4@gmail.com">GrassyHillProductions4@gmail.com</a></h5>
+        <!--<form class='contact-us'>-->
+          <!--<div class="input-field">-->
+            <!--<label>Name</label>-->
+            <!--<input type="text" class='name'>-->
+          <!--</div>-->
+          <!--<div class="input-field">-->
+            <!--<label>Email</label>-->
+            <!--<input type="text" class='email'>-->
+          <!--</div>-->
+          <!--<div class="input-field">-->
+            <!--<label>Message</label>-->
+            <!--<textarea rows="8" cols="40" class='message'></textarea>-->
+          <!--</div>-->
+          <!--<h6 class='message'></h6>-->
+          <!--<input type="submit" value="Send" class='btn submit'>-->
+        <!--</form>-->
       </div>
     </div>
   </div>
