--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
         <% end %>
       </div>
       <div class="col s12 m7 left-align valign trochut">
-        <h3 class="trochut center-align title">Back-Lit Canvas Art</h3>
+        <h3 class="trochut center-align title">Say it in Lights</h3>
         <ul>
           <li><h5>- Express love, encouragement, and even a birthday wish.</h5></li>
           <li><h5>- Sits 6"x8", battery powered, and an on/off switch.</h5></li>
