--- a/app/views/led_pictures/index.html.erb
+++ b/app/views/led_pictures/index.html.erb
@@ -1,5 +1,5 @@
 
-<h1 class="center-align trochut" style="text-decoration:underline">Back-Lit Canvas Art</h1>
+<h1 class="center-align trochut" style="text-decoration:underline">Say it in Lights</h1>
 
 
 <!-- <div class="center-align row">
