new images setup

--- a/app/views/admin/led_pictures.html.erb
+++ b/app/views/admin/led_pictures.html.erb
@@ -44,6 +44,9 @@
 
       <input type="radio" id="square" name="led_picture[type]" value="Square"/>
       <label for="square">Is this a square picture?</label>
+
+      <input type="radio" id="new-style" name="led_picture[type]" value="NewStyle"/>
+      <label for="new-style">Is this the new style?</label>
     </div><br>
     <input type="submit" class="btn btn-primary">
   <% end %>
