--- a/app/views/led_pictures/index.html.erb
+++ b/app/views/led_pictures/index.html.erb
@@ -38,6 +38,7 @@
 <% end %>
 
 <div class="row center-align">
+  <h6>* = includes 6 minute timer.</h6>
   <div class="col s6">
     <img src="/back-view.jpg" alt="" class="responsive-img"/>
   </div>
